# repodigest

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
github_ingest/: __init__.py  __main__.py  analyzer.py  cli.py  core.py  formatter.py  server.py
github_ingest/static/: index.html
